# pemasak-infra

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  configuration.example.yml  docker-compose.yml  flake.nix  refs.example  rust-toolchain.toml  schema.sql
.sqlx/: query-0078e0aae5911ad5e97f2735d79c95d478b8ffdd74373474ff4402ab7670cca7.json  query-01059f1f87bd3f756958ccb8536e7e9248907544f2d10ce89e6452616c01fe31.json  query-016f3a580a7b93b823288add61c9d5c0aaad64666b3b9e69e8ac467c5dd2b0b1.json  query-043c94ebbe39555964fa442da333add2d1a38a171df2d5fd14334e0c555d9b58.json  query-045c39ddec761ea16a72ffbc4b142d006720533330a8c4015d0009414c99c559.json  query-047c196032965b52ff29d1f712a6d903aea014ee607e373ea8f77fb3539e72e3.json  query-0480a383036114513ca5b192da1bc9501c29fadcf104424ba1b1f71fa55e0681.json  query-0779e57023ad964c5d9c501665ff06d8273734aaec28b4ff0608ad795ad47a37.json  query-09e037468826f38f6b2bd27d5255541e185ee87d88616543dd2df4b43dc96a44.json  query-0a3f7cfccfea187e64eb3750446a14835f819a73a988d0482d79486dba379e9a.json  query-16e84d577155f3c47fcb736bbad4dcaf05b21c79d47fe008e209191157f5697e.json  query-1d1367cc2d5747b9568e6c5261ff22ff4114281ae3a75181188b48fabfb725c5.json  query-1e51fe259a54bd37cc598c56155919ae27715f8e1b572da296a97b48e93a1acd.json  query-22ceb6dcdb0c67ab967cb05477ec776c96de828abf7f7af62e116475d2397949.json  query-23d4f1a2179a13dc517f633770b575b258c478ceb09362fbb89c1fa1f3ac1f2f.json  query-2d10dd3afcb8a65bd086b67f614ab104ba2cd0a6ffa1899b32ae46cd1d527d5b.json  query-2e2066c9a53e8826d48215c20f0a10317cd07cc2476a2b1c3b6c17fe1da7f678.json  query-2e356245033be3b7137b8302775020cd911b22381e030608a8b821d223242161.json  query-2edbf6d1d0e0b7a838116aafe3b2d01bee7c7604fb5698ea46789f42667a992b.json  query-2fe655f0d6a12b063a4929f0198368d6920d948c5f3234f0290ba6364950cddf.json  query-3144dd156fc2be59ef9e6933f792b033f50a396ea583426c37e79a3a7e0f7d14.json  query-316adbdf32ecb4c8d2cdced07f6eb230a87a3181ae01d42fd9b71b603e75e6d3.json  query-326faaf5771b1a3d971ef87580d02f60f397cd23f6429a52c5c546e696c29f0b.json  query-32f52b34eea20ff8d7ad04ada3cd0e609829bb603a568ab12fe610296fb4e3ac.json  query-3441dba2577900b883018379f67d219c1f4504f5bdd41844beaab442333115a8.json  query-353d61e8efd8c7630e1f51901d34fe56871883f9f4050c6856f2f29f8b088d6a.json  query-3676b518ca26244434d6cb5dd78702c54b6c327ccda6d5633f93a068c4141c3c.json  query-372e9b7c4534a623398fda5447a7ab09a156499a1549cb6265f57851cf2289e2.json  query-37de4981635001d8133120cad4a3681ccdf4ded810c0052801e4e43316628327.json  query-3909420ca9fc465e2871856ecac3981b793c518e53a342358816da136f629563.json  query-3d59624d6475bb833ec6fd3d9acb2d4db90e8d1cd17471c0aac2cff159f73641.json  query-3e05ba4f4293d93199d9427256a714cf5db566f2b68c6b1714fbbe1c43616f70.json  query-46e7cb852320e8258a0d2c98f6ac3c41ae8a43241768655eb3fff32a504e2cd3.json  query-498212b6a2532f1dc36a9f6b207cb18e3ee00d33480351ffe072b422e4fd59c6.json  query-4adbd9c9730521392eb30342b23c826d67c5fed711b682c6f5bbdff91c27ca58.json  query-4ba3bebb78b5a40ca2550de3774caf3845922be085af2b3639a59ee336bd8c57.json  query-4d76fd4c43c2d1cc261a2a7c2a6dcbf4d210acdcc319073236050314b2c530af.json  query-4f37ad11ba9c857ae848b7f629f3792d69f0c953eae10873356b4fc477b6c753.json  query-5beb1b39003baf1810845085a2b0b04711d5d39876eacbe0e4473108b59ed698.json  query-6348ac034ac6d018cc54abe14327cf1cf0dc82603b98efa520ac3e7804afa113.json  (+59 more)
assets/: global.css
config/caddy/: Caddyfile
config/fluentd/: fluent.conf
config/grafana/: datasource.yml
config/k6/: .env.example  .gitignore  data.example.csv  install.sh  script.js  script_sg1.js  script_ts1.js  script_ts2.js  script_ts3.js  script_ts4.js  script_ts5.js  script_ts6.js  script_ts7.js  script_ts8.js  script_ts9-10-11.js
config/loki/: local-config.yaml
config/prometheus/: prometheus.yml
docs-ui/: Dockerfile  docusaurus.config.ts  package-lock.json  package.json  pnpm-lock.yaml
docs-ui/docs/: intro.md
migrations/: 20230930052633_create_user.sql  20230930052744_api_token.sql  20230930115134_owner_and_domains.sql  20231001122433_user_permissions.sql  20231001174806_sessions.sql  20231004065423_init_db.sql  20231007150016_init.sql  20231010140913_add_network_info_on_domains.sql  20231010141823_change_id_in_domains.sql  20231024101047_create_builds_table.sql  20231024112528_add_log_field.sql  20231101071214_create_organization_schema.sql  20231105094142_drop_organization_schema.sql  20231208140848_add_envs_to_project.sql  20231209132301_add_state_to_project.sql  20231210045538_change_default_state_to_stopped.sql  20231210061157_add_state_to_project.sql  20231212095111_add_subnet_to_domains.sql  20231215111711_add_hosted_ip_on_domain.sql  20231216162620_create_extention_pgmq.sql  20240916073050_add_environs_field.sql  20240921060840_add_default_fields_to_environs.sql  atlas.sum
scripts/: apply.sh  env.sh  install-git-hooks.sh  install-nix.sh  install-tools.sh  migrate.sh  postgres.sh  pre-commit  revert.sh
src/: auth.rs  components.rs  configuration.rs  dashboard.rs  docker.rs  git.rs  lib.rs  main.rs  owner.rs  projects.rs  queue.rs  startup.rs  telemetry.rs  web.rs
src/auth/: mod.rs
src/dashboard/: get_dashboard_projects.rs
src/go-example/: go.mod  main.go
src/projects/: components.rs  create_project.rs  dashboard.rs  delete_project.rs  delete_volume.rs  logs.rs  mod.rs  preferences.rs  project_dashboard.rs  start_project.rs  (+4 more)
ui/: components.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
(+52 files in other folders)
