[package]
name = "pemasak-infra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
argon2 = "0.5.2"
axum = { version = "0.6.20", features = [
  "tracing",
  "json",
  "tokio",
  "tower-log",
  "form",
  "headers",
] }
axum-auth = "0.4.0"
axum-extra = { version = "0.8.0", features = ["typed-routing"] }
bollard = "0.15.0"
byte-unit = "4.0.19"
bytes = "1.5.0"
chrono = "0.4.31"
clap = "4.4.5"
config = "0.13.3"
dotenvy = "0.15.7"
flate2 = "1.0.27"
futures-util = "0.3.28"
git2 = "0.18.0"
hyper = { version = "0.14.27", features = ["server", "full"] }
hyper_cgi = "22.4.15"
lazy_static = "1.4.0"
leptos = { version = "0.5.0", features = ["ssr"] }
nixpacks = "1.16.0"
password-hash = "0.5.0"
rand = "0.8.5"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = "0.7.9"
tower = { version = "0.4.13", features = ["tokio"] }
tower-http = { version = "0.4.4", features = ["full", "trace"] }
tracing = "0.1.37"
tracing-bunyan-formatter = "0.3.9"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
ulid = { version = "1.1.0", features = ["uuid", "postgres", "serde"] }
url = "2.4.1"
uuid = "1.4.1"

[dependencies.sqlx]
version = "0.7.1"
default-features = false
features = [
  "postgres",
  "runtime-tokio-rustls",
  "macros",
  "uuid",
  "chrono",
  "migrate",
]
