[package]
name = "pemasak-infra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
argon2 = "0.5.2"
async-trait = "0.1.74"
axum = { version = "0.6.20", features = [
  "tracing",
  "json",
  "tokio",
  "tower-log",
  "form",
  "headers",
] }
axum-extra = { version = "0.8.0", features = ["typed-routing"] }
axum_session = "0.6.1"
axum_session_auth = "0.6.0"
bollard = "0.15.0"
byte-unit = "4.0.19"
bytes = "1.5.0"
chrono = "0.4.31"
clap = "4.4.6"
config = "0.13.3"
data-encoding = "2.4.0"
dotenvy = "0.15.7"
flate2 = "1.0.28"
futures-util = "0.3.28"
garde = { version = "0.15.0", features = ["regex"] }
git2 = "0.18.1"
http-body = "0.4.5"
hyper = { version = "0.14.27", features = ["server", "full"] }
lazy_static = "1.4.0"
leptos = { version = "0.5.1", features = ["ssr", "experimental-islands"] }
nixpacks = "1.17.0"
password-hash = "0.5.0"
rand = "0.8.5"
regex = "1.10.1"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["full"] }
tokio-util = "0.7.9"
tower = { version = "0.4.13", features = ["tokio"] }
tower-http = { version = "0.4.4", features = ["full", "trace"] }
tracing = "0.1.39"
tracing-bunyan-formatter = "0.3.9"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
ulid = { version = "1.1.0", features = ["uuid", "postgres", "serde"] }
url = "2.4.1"
uuid = "1.4.1"

[dependencies.sqlx]
version = "0.7.2"
default-features = false
features = [
  "postgres",
  "runtime-tokio-rustls",
  "macros",
  "uuid",
  "chrono",
  "migrate",
]
