[package]
name = "pemasak-infra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
argon2 = "0.5.2"
async-trait = "0.1.74"
axum = { version = "0.6.20", features = [
  "tracing",
  "json",
  "tokio",
  "tower-log",
  "form",
  "headers",
  "ws",
] }
axum-extra = { version = "0.8.0", features = ["typed-routing"] }
axum_session = "0.6.1"
axum_session_auth = "0.6.0"
bollard = "0.15.0"
byte-unit = "4.0.19"
bytes = "1.5.0"
chrono = "0.4.31"
clap = "4.4.11"
config = "0.13.4"
data-encoding = "2.5.0"
flate2 = "1.0.28"
futures = "0.3.29"
futures-util = "0.3.29"
garde = { version = "0.15.0", features = ["regex"] }
git2 = "0.18.1"
http-body = "0.4.5"
hyper = { version = "0.14.27", features = ["server", "full"] }
lazy_static = "1.4.0"
leptos = { version = "0.5.4", features = ["ssr", "experimental-islands"] }
nixpacks = { git = "https://github.com/Meta502/nixpacks" }
password-hash = "0.5.0"
procfile = { version = "0.2.1", default-features = false, features = ["serde"] }
rand = "0.8.5"
regex = "1.10.2"
reqwest = { version = "0.11.22", default-features = false, features = ["rustls-tls", "tokio-rustls", "serde_json", "json", "cookies"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
strip-ansi-escapes = "0.2.0"
thiserror = "1.0.50"
time = { version = "0.3.30", features=["macros", "formatting", "local-offset"]}
tokio = { version = "1.34.0", features = ["full"] }
tokio-util = "0.7.10"
tower = { version = "0.4.13", features = ["tokio"] }
tower-http = { version = "0.4.4", features = ["full", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
ulid = { version = "1.1.0", features = ["uuid", "postgres", "serde"] }
url = "2.5.0"
uuid = "1.6.1"

[dependencies.sqlx]
version = "0.7.3"
default-features = false
features = [
  "postgres",
  "runtime-tokio-rustls",
  "macros",
  "uuid",
  "chrono",
  "migrate",
]
